databases/dr-drill.yaml
# the drill runner talks to the apiserver only
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: dr-drill
  namespace: databases
spec:
  endpointSelector:
    matchLabels: { app: dr-drill }
  egress:
    - toEndpoints:
        - matchLabels: { io.kubernetes.pod.namespace: kube-system, k8s-app: kube-dns }
      toPorts:
        - ports:
            - { port: "53", protocol: UDP }
            - { port: "53", protocol: TCP }
    - toEntities: [kube-apiserver, host, remote-node]
      toPorts:
        - ports: [{ port: "6443", protocol: TCP }]
---
# the scratch cluster: operator and itself in, gateway and apiserver out, never the world
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: dr-bot-pg
  namespace: databases
spec:
  endpointSelector:
    matchLabels: { cnpg.io/cluster: dr-bot-pg }
  ingress:
    - fromEndpoints:
        - matchLabels: { io.kubernetes.pod.namespace: cnpg-system, app.kubernetes.io/name: cloudnative-pg }
        - matchLabels: { cnpg.io/cluster: dr-bot-pg }
        - matchLabels: { app: dr-drill-check }
      toPorts:
        - ports: [{ port: "8000", protocol: TCP }, { port: "5432", protocol: TCP }]
    - fromEntities: [host]
      toPorts:
        - ports: [{ port: "8000", protocol: TCP }]
  egress:
    - toEndpoints:
        - matchLabels: { io.kubernetes.pod.namespace: kube-system, k8s-app: kube-dns }
      toPorts:
        - ports:
            - { port: "53", protocol: UDP }
            - { port: "53", protocol: TCP }
    - toEndpoints:
        - matchLabels: { cnpg.io/cluster: dr-bot-pg }
      toPorts:
        - ports:
            - { port: "5432", protocol: TCP }
            - { port: "8000", protocol: TCP }
    - toEndpoints:
        - matchLabels: { io.kubernetes.pod.namespace: s3-gateway, app: s3-gateway }
      toPorts:
        - ports: [{ port: "8443", protocol: TCP }]
    - toEntities: [kube-apiserver, host]
      toPorts:
        - ports: [{ port: "6443", protocol: TCP }]
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: dr-drill-check
  namespace: databases
spec:
  endpointSelector:
    matchLabels: { app: dr-drill-check }
  egress:
    - toEndpoints:
        - matchLabels: { io.kubernetes.pod.namespace: kube-system, k8s-app: kube-dns }
      toPorts:
        - ports:
            - { port: "53", protocol: UDP }
            - { port: "53", protocol: TCP }
    - toEndpoints:
        - matchLabels: { cnpg.io/cluster: dr-bot-pg }
      toPorts:
        - ports: [{ port: "5432", protocol: TCP }]
